# mcmod-manager

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: integration_test.toml  mcmod.toml  mcmods.toml  modrinth.toml
mcmod_manager/: __init__.py  cli.py  mod_classes.py  mod_config.py  mod_session.py  result.py
modrinth_manager/: __init__.py  cli.py  config.py  session.py
src/: __init__.py  cache.rs  config.rs  error.rs  labrinth.rs  labrinth_session.py  main.rs  solver.rs  types.rs
src/api/: labrinth.rs  mod.rs
src/mcmod_client/: labrinth.rs  mod.rs
