[package]
name = "mcmod"
version = "0.1.0"
edition = "2024"
authors = ["Donovan Blake <donovanjblake@gmail.com>"]
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde_json = {version = "1.0.145"}
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = {version="1.0.228", features = ["derive"]}
toml = { version = "0.9.7" }
dirs = "6.0.0"
